[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
redis = { version = "0.24", features = ["tokio-comp", "streams"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v7"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
